# whisperx-api

./: .dockerignore  .env-example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  api_whisperx.py  app_whisperx.py  celery.db  docker-compose.yml  docker-entrypoint.sh  get-murmurai.sh  get-whisperx.sh  pyproject.toml  readme.md  requirements.txt  start.py  test_api_whisperex.py  users.db  utils.py
.genie/: AGENTS.md
.genie/agents/: README.md  analyze.md  forge.md  garbage-cleaner.md  garbage-collector.md  github-issue-gc.md  review.md  semantic-analyzer.md  update.md  wish.md
.genie/agents/semantic-analyzer/: find-duplicates.md  find-orphans.md
.genie/code/: AGENTS.md
.genie/code/agents/: architect.md  audit.md  benchmarker.md  challenge.md  change-reviewer.md  code-garbage-collector.md  code-quality.md  commit-suggester.md  commit.md  consensus.md  daily-standup.md  deployer.md  docgen.md  ergonomist.md  explore.md  fix.md  git.md  implementor.md  install.md  issue-creator.md  measurer.md  operator.md  polish.md  qa.md  questioner.md  refactor.md  release.md  roadmap.md  sentinel.md  simplifier.md  tests.md  tracer.md  vibe.md
.genie/code/agents/audit/: risk.md  security.md
.genie/code/agents/git/: commit-advisory.md
.genie/code/agents/git/workflows/: issue.md  pr.md  release.md  report.md
.genie/code/agents/update/: upstream-update.md
.genie/code/agents/update/versions/: generic-update.md
.genie/code/spells/: agent-configuration.md  automated-rc-publishing.md  branch-tracker-guidance.md  debug.md  emoji-naming-convention.md  evidence-storage.md  file-naming-rules.md  forge-code-blueprints.md  genie-integration.md  publishing-protocol.md  team-consultation-protocol.md  tool-requirements.md  triad-maintenance-protocol.md
.genie/neurons/: README.md  forge.md  genie.md  review.md  wish.md
.genie/product/: README.md  cli-automation.md  environment.md  mission.md  roadmap.md  tech-stack.md
.genie/product/templates/: context-template.md  qa-done-report-template.md  review-report-template.md  wish-template.md
.genie/scripts/helpers/: analyze-commit.js  bullet-counter.js  bullet-find.js  bullet-id.js  check-secrets.js  count-tokens.js  create-frontmatter.js  detect-markers.js  detect-todos.js  detect-unlabeled-blocks.js  embeddings.js  find-empty-sections.js  index.js  validate-frontmatter.js  validate-links.js  validate-paths.js
.genie/spells/: README.md  ace-protocol.md  ask-one-at-a-time.md  backup-analyzer.md  blocker.md  break-things-move-fast.md  context-candidates.md  context-critic.md  council-review.md  defer-to-expertise.md  delegate-dont-do.md  error-investigation-protocol.md  evidence-based-completion.md  experiment.md  file-creation-protocol.md  forge-integration.md  forge-orchestration.md  gather-context.md  global-health-check.md  global-noop-roundtrip.md  install-genie.md  install.md  investigate-before-commit.md  know-yourself.md  learn.md  mcp-diagnostic-protocol.md  mcp-first.md  multi-step-execution.md  orchestration-boundary-protocol.md  orchestrator-not-implementor.md  prompt.md  reflect.md  routing-decision-matrix.md  run-in-parallel.md  session-state-updater-example.md  session-state-updater.md  track-long-running-tasks.md  troubleshoot-infrastructure.md  upgrade-genie.md  url-presentation-protocol.md  (+3 more)
.genie/state/: version.json
.github/: release.yml
.github/workflows/: ci.yml  docker-image.yml  release.yml
api/: auth.py  config.py  database.py  main.py  models.py  tasks.py
scripts/: bump_version.py
src/api/: auth.py  config.py  database.py  main.py  main_backup.py  models.py  tasks.py
src/murmurai/: __init__.py  __main__.py  auth.py  config.py  database.py  deps.py  main.py  model_manager.py  server.py  transcriber.py
src/murmurai_server/: __init__.py  __main__.py  auth.py  config.py  database.py  deps.py  logging.py  main.py  model_manager.py  models.py  server.py  transcriber.py
src/tests/: test_auth.py  test_database.py  test_file_utils.py  test_main.py  test_tasks.py  test_transcription_utils.py
src/utils/: file_utils.py  transcription_utils.py
src/whisperx_api/: __init__.py  __main__.py  auth.py  config.py  database.py  deps.py  logging.py  main.py  model_manager.py  models.py  server.py  transcriber.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_database.py  test_models.py  test_server.py
utils/: file_utils.py  transcription_utils.py
