[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "murmurai"
version = "1.0.3"
description = "GPU-powered transcription API with speaker diarization"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT"}
keywords = ["murmurai", "transcription", "speech-to-text", "api", "whisper", "diarization"]
authors = [
    {name = "Felipe Rosa"},
    {name = "Namastex Labs"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "murmurai-core>=1.0.2",
    "fastapi>=0.110",
    "uvicorn>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.7",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
murmurai = "murmurai_server.main:run"

[project.urls]
Homepage = "https://github.com/namastexlabs/murmurai"
Repository = "https://github.com/namastexlabs/murmurai.git"
Issues = "https://github.com/namastexlabs/murmurai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/murmurai_server"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv]
managed = true
index-strategy = "unsafe-best-match"

[tool.uv.sources]
# Use CUDA 12.8 wheels on Linux/Windows, PyPI CPU wheels on macOS
torch = {index = "pytorch", marker = "sys_platform != 'darwin'"}
torchaudio = {index = "pytorch", marker = "sys_platform != 'darwin'"}

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = false
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-untyped-def", "attr-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8",
]
